replenishment-workshop-challenge/force-app/main/default/objects/StoreProduct/fields/Average_Daily_Sales__c.field-meta.xml
<CustomField>
    <fullName>Average_Daily_Sales__c</fullName>
    <description>Average number of units sold per day at this retail store.</description>
    <label>Average Daily Sales</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>