replenishment-workshop-challenge/force-app/main/default/objects/StoreProduct/fields/Current_Stock__c.field-meta.xml
<CustomField>
    <fullName>Current_Stock__c</fullName>
    <description>Current sellable units observed for the product at the retail store.</description>
    <label>Current Stock</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>