replenishment-workshop-challenge/force-app/main/default/objects/StoreProduct/fields/Lead_Time_Days__c.field-meta.xml
<CustomField>
    <fullName>Lead_Time_Days__c</fullName>
    <description>Expected supplier lead time in whole days.</description>
    <label>Lead Time Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>