replenishment-workshop-challenge/force-app/main/default/objects/StoreProduct/fields/Safety_Stock__c.field-meta.xml
<CustomField>
    <fullName>Safety_Stock__c</fullName>
    <description>Minimum reserve quantity maintained for this product at the store.</description>
    <label>Safety Stock</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>